# readthedocs

./: README.rst  pyproject.toml
docs/source/: conf.py  index.rst  usage.rst
